src/objects/Threat_Tier__mdt.object
<CustomObject>
    <fields>
        <fullName>Account_TierClone1__c</fullName>
        <label>Account TierClone1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Tier__c</fullName>
        <label>Account Tier</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VacationClone1__c</fullName>
        <label>VacationClone1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vacation__c</fullName>
        <label>Vacation</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Threat Tier</label>
    <pluralLabel>Threat Tiers</pluralLabel>
</CustomObject>